tests/ui/specialization/min_specialization/repeating_lifetimes.stderr
error: specializing impl repeats parameter `'a`
  --> $DIR/repeating_lifetimes.rs:14:1
   |
LL | impl<'a> X for (&'a u8, &'a u8) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

